--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,16 @@
+Version 0.3.2
+~~~~~~~~~~~~~
+Released: 2020-01-06
+
+Bugfixes:
+ - Do not use deprecated libusb API (Richard Hughes)
+ - Fix compilation on macOS (Richard Hughes)
+ - Use a 1ms timeout in the Windows event thread (Richard Hughes)
+ - Use has_link_argument() to detect linker flags (Richard Hughes)
+
 Version 0.3.1
 ~~~~~~~~~~~~~
-Released: 2018-11-16
+Released: 2019-11-16
 
 New Features:
  - Add g_usb_device_get_spec() (Richard Hughes)
