libgusb: Autospec creation for update from version 0.3.6 to version 0.3.7
Marco Trevisan (Treviño) (2):
      device: Do not double-reference USB devices
      device: Reference the libusb device when set

Richard Hughes (15):
      trivial: post release version bump
      trivial: Fix a tiny memork leak when running the gusb test tool
      Move the CI to GitHub actions
      Only run CI build on master
      trivial: Move Debian CI to buster
      Do not run the tests on FreeBSD
      Lower the libusb dep to fix compile on FreeBSD
      Do not depend on libusb_get_parent() to fix FreeBSD compile
      Do not depend on libusb_get_port_number() to fix DragonFlyBSD compile
      trivial: Make build_and_test.sh less of a footgun
      Require *any* python3 to fix FreeBSD build
      trivial: Do not hardcode the libusb.h include directory
      Add a FreeBSD CI target
      trivial: Fix a warning when used in a subproject
      Release version 0.3.7

Version 0.3.7
~~~~~~~~~~~~~
Released: 2021-05-24

New Features:
 - Add a FreeBSD CI target (Richard Hughes)

Bugfixes:
 - Do not depend on libusb_get_parent() to fix FreeBSD compile (Richard Hughes)
 - Do not depend on libusb_get_port_number() to fix DragonFlyBSD compile (Richard Hughes)
 - Do not double-reference USB devices (Marco Trevisan)
 - Do not run the tests on FreeBSD (Richard Hughes)
 - Require *any* python3 to fix FreeBSD build (Richard Hughes)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Version 0.3.7
+~~~~~~~~~~~~~
+Released: 2021-05-24
+
+New Features:
+ - Add a FreeBSD CI target (Richard Hughes)
+
+Bugfixes:
+ - Do not depend on libusb_get_parent() to fix FreeBSD compile (Richard Hughes)
+ - Do not depend on libusb_get_port_number() to fix DragonFlyBSD compile (Richard Hughes)
+ - Do not double-reference USB devices (Marco Trevisan)
+ - Do not run the tests on FreeBSD (Richard Hughes)
+ - Require *any* python3 to fix FreeBSD build (Richard Hughes)
+
 Version 0.3.6
 ~~~~~~~~~~~~~
 Released: 2021-03-12
