libgusb: Autospec creation for update from version 0.3.7 to version 0.3.8
Benjamin Berg (1):
      context: Fix hotplug handling and signal emission during enumerate

Ricardo Cañuelo (1):
      Add g_usb_device_get_string_descriptor_bytes_full

Richard Hughes (5):
      trivial: post release version bump
      trivial: Add the GUsbEndpoint methods to the docs
      trivial: Rename the master branch to main
      trivial: No longer require vala-tools to build the vapi
      Release version 0.3.8

Version 0.3.8
~~~~~~~~~~~~~
Released: 2021-10-06

New Features:
 - Add g_usb_device_get_string_descriptor_bytes_full (Ricardo Cañuelo)

Bugfixes:
 - Add the GUsbEndpoint methods to the docs (Richard Hughes)
 - Fix hotplug handling and signal emission during enumerate (Benjamin Berg)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Version 0.3.8
+~~~~~~~~~~~~~
+Released: 2021-10-06
+
+New Features:
+ - Add g_usb_device_get_string_descriptor_bytes_full (Ricardo Cañuelo)
+
+Bugfixes:
+ - Add the GUsbEndpoint methods to the docs (Richard Hughes)
+ - Fix hotplug handling and signal emission during enumerate (Benjamin Berg)
+
 Version 0.3.7
 ~~~~~~~~~~~~~
 Released: 2021-05-24
