libgusb: Autospec creation for update from version 0.3.8 to version 0.3.9
Richard Hughes (5):
      trivial: post release version bump
      Fix hotplug after threaded device removal
      trivial: Fix FreeBSD CI
      trivial: Sync spec file with downstream
      Release version 0.3.9

Ting-Wei Lan (2):
      Don't hard-code the list of OS supporting --version-script
      Fix version script check for GNU BFD linker on FreeBSD

Version 0.3.9
~~~~~~~~~~~~~
Released: 2021-12-07

Bugfixes:
 - Don't hard-code the list of OS supporting --version-script (Ting-Wei Lan)
 - Fix hotplug after threaded device removal (Richard Hughes)
 - Fix version script check for GNU BFD linker on FreeBSD (Ting-Wei Lan)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Version 0.3.9
+~~~~~~~~~~~~~
+Released: 2021-12-07
+
+Bugfixes:
+ - Don't hard-code the list of OS supporting --version-script (Ting-Wei Lan)
+ - Fix hotplug after threaded device removal (Richard Hughes)
+ - Fix version script check for GNU BFD linker on FreeBSD (Ting-Wei Lan)
+
 Version 0.3.8
 ~~~~~~~~~~~~~
 Released: 2021-10-06
