libgusb: Autospec creation for update from version 0.3.9 to version 0.3.10
Richard Hughes (4):
      trivial: post release version bump
      Add API to change the hotplug poll interval
      trivial: Remove the '1:1 already exists' debug lines on rescan
      Release version 0.3.10

Version 0.3.10
~~~~~~~~~~~~~~
Released: 2021-01-10

New Features:
 - Add API to change the hotplug poll interval (Richard Hughes)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.3.10
+~~~~~~~~~~~~~~
+Released: 2021-01-10
+
+New Features:
+ - Add API to change the hotplug poll interval (Richard Hughes)
+
 Version 0.3.9
 ~~~~~~~~~~~~~
 Released: 2021-12-07
