libgusb: Autospec creation for update from version 0.3.10 to version 0.4.0
Benjamin Berg (1):
      gusb: Add some umockdev based tests

Richard Hughes (34):
      Never dispatch idle events after the context has been destroyed
      Only include the start year in the copyright header
      trivial: Remove some duplicate header includes
      trivial: Use SPDX-License-Identifier in one more place
      trivial: Fix case of single-line comments
      trivial: Fix a docs warning when building
      trivial: post release version bump
      Use g_autoptr() in a lot more places
      Add support for getting BOS descriptors
      Reformat the code using clang-format
      trivial: Use @self for instance data
      Use G_DECLARE_DERIVABLE_TYPE to reduce boilerplate
      trivial: Use @self for instance data
      Cache the list of interfaces and descriptors
      Serialize the GUsbDevice to and from JSON format
      Include the platform ID in the JSON file
      Skip some functionality when emulating
      trivial: Fix up some docgen headers
      trivial: Fix clang-tidy ordering issue
      trivial: Check the handle before getting BOS descriptors
      trivial: Use a boolean flag for cache control
      trivial: Use a unique JSON key name for the ID
      trivial: Ignore more requests when emulating a device
      trivial: Update the ColorHug test to reflect reality
      Save device events when required
      trivial: Fix the ColorMunki self tests
      trivial: Fix two -Wunused-variable warnings
      trivial: Ignore -Wgnu-variable-sized-type-not-at-end
      Fix loading events using _g_usb_device_event_load()
      Ignore usb.ids classes, subclasses and protocols
      trivial: Be more careful with buffers in case the usb.ids file format changes
      Do not copy event data when not-required
      Allow emulating failed events
      Release version 0.4.0

Version 0.4.0
~~~~~~~~~~~~~
Released: 2022-09-12

Notes:
 - The JSON format used to serialising devices is not yet

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+Version 0.4.0
+~~~~~~~~~~~~~
+Released: 2022-09-12
+
+Notes:
+ - The JSON format used to serialising devices is not yet stable, and might change.
+
+New Features:
+ - Add support for getting BOS descriptors (Richard Hughes)
+ - Allow emulating devices by saving and replaying device events (Richard Hughes)
+ - Cache the list of interfaces and descriptors (Richard Hughes)
+ - Serialize the GUsbDevice to and from JSON format (Richard Hughes)
+
+Bugfixes:
+ - Ignore usb.ids classes, subclasses and protocols (Richard Hughes)
+ - Never dispatch idle events after the context has been destroyed (Richard Hughes)
+ - Skip some functionality when emulating (Richard Hughes)
+
 Version 0.3.10
 ~~~~~~~~~~~~~~
 Released: 2021-01-10
