libgusb: Autospec creation for update from version 0.4.0 to version 0.4.1
Richard Hughes (13):
      trivial: post release version bump
      trivial: Fix some docs warnings when compiling the tarball
      trivial: Fix example downstream spec file
      trivial: Update to non-deprecated macos-12 CI target
      Include removed devices in the JSON dump
      trivial: Remove existing devices when loading a context
      Include the created time in the JSON event
      Allow adding tags to the JSON device event
      trivial: Fix up clang-format issue
      trivial: Don't return -1 for failure for a gboolean
      Allow loading and saving only devices with specific tags
      Port from gtkdoc to gi-docgen
      Release version 0.4.1

Version 0.4.1
~~~~~~~~~~~~~
Released: 2022-10-01

New Features:
 - Allow loading and saving only devices with specific tags (Richard Hughes)
 - Include removed devices in the JSON dump (Richard Hughes)

Bugfixes:
 - Port from gtkdoc to gi-docgen (Richard Hughes)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Version 0.4.1
+~~~~~~~~~~~~~
+Released: 2022-10-01
+
+New Features:
+ - Allow loading and saving only devices with specific tags (Richard Hughes)
+ - Include removed devices in the JSON dump (Richard Hughes)
+
+Bugfixes:
+ - Port from gtkdoc to gi-docgen (Richard Hughes)
+
 Version 0.4.0
 ~~~~~~~~~~~~~
 Released: 2022-09-12
