libgusb: Autospec creation for update from version 0.4.2 to version 0.4.3
Richard Hughes (6):
      trivial: post release version bump
      Export g_usb_device_has_tag()
      trivial: Fix up a gtk-doc comment
      Work around a libusb1 bug which causes devices to appear in the list twice
      trivial: Be less verbose
      Release version 0.4.3

Version 0.4.3
=============
Released: 2022-12-20

This release fixes the following bugs:
 * Export g_usb_device_has_tag()
 * Work around a libusb issue which causes devices to appear twice

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Version 0.4.3
+=============
+Released: 2022-12-20
+
+This release fixes the following bugs:
+ * Export g_usb_device_has_tag()
+ * Work around a libusb issue which causes devices to appear twice
+
 Version 0.4.2
 =============
 Released: 2022-10-18
