libgusb: Autospec creation for update from version 0.4.3 to version 0.4.4
Frédéric Danis (4):
      Fix g_usb_interface_finalize without endpoints
      Fix _g_usb_interface_save without endpoints
      Load GUsb endpoints when loading interface
      Save removed devices in JSON dump only when requested

Richard Hughes (10):
      trivial: post release version bump
      trivial: Fix -Wdeclaration-after-statement
      Add g_usb_device_remove_tag() for future use
      Add g_usb_device_is_emulated() for future use
      Add g_usb_device_get_tags() for future use
      Emit remove devices with matching tags when loading contexts
      Add g_usb_device_clear_events() for future use
      trivial: Export the gusb-device-event.h header
      Reduce the debugging level when emulating firmware
      Release version 0.4.4

Version 0.4.4
=============
Released: 2023-01-30

This release adds the following features:
 * Add new API to make emulation easier to use

This release fixes the following bugs:
 * Emit remove devices with matching tags when loading contexts
 * Fix a critical warning when finalizing devices without endpoints
 * Reduce the debugging level when emulating firmware

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 0.4.4
+=============
+Released: 2023-01-30
+
+This release adds the following features:
+ * Add new API to make emulation easier to use
+
+This release fixes the following bugs:
+ * Emit remove devices with matching tags when loading contexts
+ * Fix a critical warning when finalizing devices without endpoints
+ * Reduce the debugging level when emulating firmware
+
 Version 0.4.3
 =============
 Released: 2022-12-20
