libgusb: Autospec creation for update from version 0.4.4 to version 0.4.5
Richard Hughes (11):
      trivial: post release version bump
      Add g_usb_device_get_created() to better detect emulated replug
      trivial: Add some debugging when resetting the event index
      Save the libusb error if libusb_submit_transfer() fails
      Do not emit spurious ::device-removed events when emulating
      Reset the in-order event index when clearing the event array
      Record zero-sized device events
      trivial: Fix critical warning when unloading an emulated device
      Store the config-index as a GUsbDeviceEvent
      trivial: Fix critical warning when emulating devices
      Release version 0.4.5

Version 0.4.5
=============
Released: 2023-02-08

This release adds the following features:
 * Add new API to better detect emulated replug

This release fixes the following bugs:
 * Do not emit spurious ::device-removed events when emulating
 * Record zero-sized device events
 * Reset the in-order event index when clearing the event array
 * Save the libusb error if libusb_submit_transfer() fails

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 0.4.5
+=============
+Released: 2023-02-08
+
+This release adds the following features:
+ * Add new API to better detect emulated replug
+
+This release fixes the following bugs:
+ * Do not emit spurious ::device-removed events when emulating
+ * Record zero-sized device events
+ * Reset the in-order event index when clearing the event array
+ * Save the libusb error if libusb_submit_transfer() fails
+
 Version 0.4.4
 =============
 Released: 2023-01-30
