--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Version 0.4.9
+=============
+Released: 2024-04-22
+
+This release fixes the following bugs:
+ * Allow reading HID descriptors larger than 255 bytes
+ * Close the libusb handle if returning open failure
+ * Fix a buffer over-read when emulating devices
+ * Only request the BOS descriptor when bcdUSB is new enough
+
 Version 0.4.8
 =============
 Released: 2023-11-07
